--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,9 +14,9 @@ jobs:
       - uses: DeterminateSystems/nix-installer-action@main
       - uses: DeterminateSystems/magic-nix-cache-action@main
       - name: Build the nix shell
-        run: nix develop --command just --version
+        run: nix develop --command cargo --version
       - uses: Swatinem/rust-cache@v2
 
       # run tests
       - name: Run tests
-        run: nix develop --command just test
+        run: nix develop --command cargo test
